@@ -10,9 +10,8 @@ Release: %{rel}
 Copyright: wxWindows Licence
 Group: X11/Libraries
 Source: wxGTK-%{ver}.tgz
-URL: http://wesley.informatik.uni-freiburg.de/~wxxt
-Packager: Robert Roebling <roebling@ruf.uni-freiburg.de>
-BuildRoot: /tmp/wxgtk_root
+URL: http://wxwindows.org
+Packager: Robert Roebling <robert@roebling.de>
 
 # all packages providing an implementation of wxWindows library (regardless of
 # the toolkit used) should provide the (virtual) wxwin package, this makes it
@@ -53,11 +52,7 @@ fi
 $MAKE
 
 %install
-rm -rf $RPM_BUILD_ROOT
-make prefix=$RPM_BUILD_ROOT%{pref} install
-
-%clean
-rm -rf $RPM_BUILD_ROOT
+make install
 
 %post
 /sbin/ldconfig
@@ -71,7 +66,7 @@ rm -rf $RPM_BUILD_ROOT
 %dir %{pref}/share/wx
 %{pref}/share/wx/*
 %attr(755, -, -) %{pref}/lib/libwx_gtk.*
-%attr(755, -, -) %{pref}/lib/libwx_gtk-2.1.*
+%attr(755, -, -) %{pref}/lib/libwx_gtk-2.2.*
 
 %files devel
 %defattr (644, root, root, 755)
